<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="flag_image">Flag Image</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_country">Sort by country</string>
    <string name="student_image">Student image</string>
    <string name="show_student_image_on_list">Show student image on list</string>
    <string name="play">Play</string>
    <string name="play_button">Play Button</string>
    <string name="search_hint">Search the student</string>
    <string name="speech_and_show_name">Speech and Show name</string>
    <string name="image_next">Image next</string>
    <string name="image_previous">Image previous</string>
    <string name="randomize">Randomize</string>
    <string name="learn_name_s_time_left_second_configure">Learn name\'s time left second configure -> %d</string>

</resources>