<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textLearnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#514B4B"
        android:textIsSelectable="false" />

    <RelativeLayout
        android:id="@+id/infoRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@+id/studentImage"
        android:layout_above="@+id/studentImage"
        android:layout_marginBottom="10dp"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="#CC0033"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/name"
            android:contentDescription="@string/flag_image"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/flag"
            android:paddingLeft="10dp"
            android:textColor="#3399FF"
            android:textIsSelectable="false"
            android:textSize="14sp" />
        
    </RelativeLayout>

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/student_image" />
    
    <TextView
        android:id="@+id/numberList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="15dp"
        android:textColor="#514B4B"
        android:layout_below="@+id/studentImage"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/speechButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/speech_and_show_name" />
    
    <ImageButton
        android:id="@+id/imageNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/studentImage"
        android:contentDescription="@string/image_next"
        android:src="@drawable/action_next" />

    <ImageButton
        android:id="@+id/imagePrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@+id/studentImage"
        android:contentDescription="@string/image_previous"
        android:src="@drawable/action_previous" />

    <Button
        android:id="@+id/randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/randomize" />

</RelativeLayout>